# opentx

radio/src/: CMakeLists.txt  dataconstants.h  datastructs.h  disk_cache.h  opentx.cpp  sdcard.h  tasks.cpp
radio/src/gui/colorlcd/: radio_sdmanager.cpp
radio/src/io/: bootloader_flash.cpp  frsky_sport.h
radio/src/targets/bhim/: CMakeLists.txt  board.h  hal.h  stm32_ramboot.ld  stm32f4_flash.ld
radio/src/targets/common/arm/stm32/: adc_driver.cpp  board_common.h
radio/src/targets/common/arm/stm32/bootloader/: CMakeLists.txt
radio/src/targets/common/arm/stm32/f4/: system_stm32f4xx.c
radio/src/targets/taranis/: BHIM_CMakeLists.txt  CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  hal.h  lcd_driver_spi.cpp  startup_stm32f40_41xxx.s
